--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 			<artifactId>jersey-container-jdk-http</artifactId>
 			<version>2.24</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
