--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.hoehne.sandbox</groupId>
-	<artifactId>TryOut</artifactId>
+	<artifactId>ProductHierarchyPreperator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 
 
 	<dependencies>
+		<dependency>
+			<groupId>de.hoehne</groupId>
+			<artifactId>util</artifactId>
+			<version>2.5</version>
+		</dependency>
 		<dependency>
 			<groupId>io.reactivex</groupId>
 			<artifactId>rxjava</artifactId>
@@ -24,12 +29,6 @@
 			<artifactId>jersey-rx-client-rxjava</artifactId>
 			<version>2.24</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>2.24</version>
-		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-jdk-http</artifactId>
@@ -41,6 +40,13 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
